# fgh

./: README.md
bigdatalog/: cc.deal  reach.deal  sssp.deal
cegis/: bc.rkt  dm.rkt  mlm.rkt  rr.rkt  rt.rkt  sg.rkt  sp.rkt  sw.rkt  tc.rkt
cegis/core/: grammar.rkt  interpret.rkt  lib.rkt  macro.rkt  ops.rkt  util.rkt
cegis/core/compiled/: grammar_rkt.dep  grammar_rkt.zo  interpret_rkt.dep  interpret_rkt.zo  lib_rkt.dep  lib_rkt.zo  macro_rkt.dep  macro_rkt.zo  ops_rkt.dep  ops_rkt.zo  util_rkt.dep  util_rkt.zo
eqsat/: Cargo.toml
eqsat/src/: analysis.rs  cli.yml  lang.rs  lib.rs  main.rs  rewrites.rs
eqsat/tests/: examples.rkt  examples.rs  normalize.rkt  normalize.rs
invinf/: Cargo.toml
invinf/src/: inter.rs  lang.rs  lib.rs  main.rs
recstep/: cc.datalog  reach.datalog  sssp.datalog
x/: bc.x  cc.x  mlm.x  r.x  reach.x  sssp.x  sw.x
