[package]
name = "semiring"
version = "0.1.0"
authors = ["Remy Wang <remy.sucre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# egg = "0.6.0"
egg = { path = "../egg" }
env_logger = {version = "0.7", default-features = false}
rand = "0.8"
# clap = {version = "2.33", features = ["yaml"]}
clap = {version = "3.0.0-beta.2", features = ["yaml"]}
smallvec = { version = "1.6", features = ["union", "const_generics"] }
